[project]
name = "mfont"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "twine>=6.2.0"
]

[dependency-groups]
dev = [
    "build",
    "twine>=6.2.0",
]

[tool.setuptools.package-data]
mfont = ["fonts/**/*"]